# agentrade-bot

./: .env.example  .gitignore  BUSINESS-PLAN.md  README.md  backtest_dashboard.py  dashboard_app.py  main.py  requirements.txt  run_backtest.py  test-hyperliquid-api.py  test_engine.py  test_live_hl.py  test_live_hyperliquid.py  test_real_trade.py  transfer_spot_to_perp.py
backtest/: data.py  engine.py  mock_exchange.py  sim_engine.py  tick_collector.py  tick_data.py
backtest_core/: Cargo.toml  pyproject.toml
backtest_core/src/: engine.rs  lib.rs  metrics.rs  sim_exchange.rs  strategy.rs  types.rs
config/: default.yaml
config/strategies/: multi_trail.yaml
core/: engine.py  event_bus.py  types.py
docs/: backtesting.md  test-hyperliquid-api.md
exchange/: base.py  rate_limiter.py
execution/: order_executor.py  order_queue.py  position_manager.py
feed/: price_feed.py
notification/: telegram.py
persistence/: state_store.py
strategy/: base.py  multi_level_trail.py
